<resources>
    <string name="app_name">Nuro</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_language_select">LanguageSelect</string>
    <string name="facebook_app_id">1051723228176233</string>
    <string name="theam_select">Theam Select</string>
    <string name="home_page">Home Page</string>
    <string name="google_maps_key">D1:B7:87:FE:C0:45:A9:42:4C:E3:DA:28:6C:E2:20:99:06:F0:54:1B</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="replay">Replay</string>
    <string name="instrections">Instructions</string>
    <string name="sound">Sound </string>
    <string name="exit_game">Exit Game</string>
    <string name="home">Home</string>
    <string name="games">Games</string>
    <string name="brain_profile">Brain Profile</string>
    <string name="compare">Compare</string>
    <string name="leadersbord">LeadersBord</string>
    <string name="friends">Friends</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="white">WHITE</string>
    <string name="red">RED</string>
    <string name="orange">ORANGE</string>
    <string name="violet">VIOLET</string>
    <string name="brown">BROWN</string>
    <string name="pink">PINK</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="spanish">Español</string>
    <string name="hindi">हिंदी</string>
    <string name="chinese">中文</string>
    <string name="french">Français</string>
    <string name="japanese">日本人</string>
    <string name="russian">русский</string>
    <string name="korean">한국의</string>
    <string name="german">Deutsch</string>
    <string name="turkish">Türk</string>
    <string name="portuguese">Português</string>
    <string name="italian">italiano</string>
    <string name="arabic">العربية</string>
    <string name="LoginWithfacebook">Sign In with Facebook </string>
    <string name="LoginWithtwitter">Sign In with Twitter</string>
    <string name="LoginWithGoogleplus">Sign In with Google+</string>
    <string name="LoginWithGmail">Sign In with Gmail</string>
    <string name="LogupWithfacebook">Sign Up with Facebook </string>
    <string name="LogupWithtwitter">Sign Up with Twitter</string>
    <string name="LogupWithGoogleplus">Sign Up with Google+</string>
    <string name="LogupWithGmail">Sign Up with Gmail</string>
    <string name="AlreadyHaveAccount">Already have an Account?</string>
    <string name="TermsnConditions">Terms and Conditions</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="Signin">Sign In</string>
    <string name="accuracy">Accuracy :</string>
    <string name="title_activity_theme_select">ThemeSelect</string>
    <string name="Light">Light</string>
    <string name="Dark">Dark</string>
    <string name="SelectTheme">Select Theme</string>
    <string name="reminder">Reminders</string>
    <string name="app_id">1544789295785047</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hi %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="photo_post">Photo Post</string>
    <string name="exception">Exception: %1$s</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected></string>
    <string name="no_place_selected">&lt;No place selected></string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="title_activity_home_page">Home</string>
    <string name="over_view">OverView</string>
    <string name="history">History</string>
    <string name="Statistics">Statistics</string>
    <string name="title_activity_select_language">Select Language</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_brain_profile">Brain Profile</string>
    <string name="title_activity_leaders_board">Leadersboard</string>
    <string name="catogery_short">Category</string>
    <string name="location">Location </string>
    <string name="over_all">Overall</string>
    <string name="skill_wise">Skill wise</string>
    <string name="game_wise">Game wise</string>
    <string name="global">Global</string>
    <string name="country">Country</string>
    <string name="your_rank">Your Rankings</string>
    <string name="your_rank_result">Your Rank</string>
    <string name="rank">Rank</string>
    <string name="nationality">Nationality</string>
    <string name="user_name">UserName</string>
    <string name="ani">ANI</string>
    <string name="title_activity_comparision">Comparision</string>
    <string name="gender_short">Gender</string>
    <string name="location_short">Location</string>
    <string name="age_short">Age</string>
    <string name="age_all">All</string>
    <string name="age_kid">Kid</string>
    <string name="age_youth">Youth</string>
    <string name="age_adult">Adult</string>
    <string name="age_mid_age">Mid Age</string>
    <string name="age_elder">Elder</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="attention">Attention</string>
    <string name="memory">Memory</string>
    <string name="visual">Visual Perception</string>
    <string name="flexibility">Flexibility</string>
    <string name="problem_solving">Problem Solving</string>
    <string name="speed">Processing Speed</string>
    <string name="your_standings">Your Standings</string>
    <string name="thirty_days">30 Days</string>
    <string name="seven_days">7 Days</string>
    <string name="today">Today</string>
    <string name="cognitive_change">Cognitive Change</string>
    <string name="overall1">OverAll</string>
    <string name="average_neuron_index">Average Neuron Index(ANI)</string>
    <string name="brain_workout_distribution">Brain Workout Distribution</string>
    <string name="title_activity_game_menu">Games</string>
    <string name="title_activity_game_name">Games</string>
    <string name="dual_focus">Dual Focus</string>
    <string name="dual_focus_pro">Dual Focus Pro</string>
    <string name="blink">Blink</string>
    <string name="blink_pro">Blink Pro</string>
    <string name="track_route">Track The Route</string>
    <string name="memory_matrix">Memory Matrix</string>
    <string name="memory_matrix_pro">Memory Matrix Pro</string>
    <string name="dancing_balls">Dancing Balls</string>
    <string name="shapes">Shapes</string>
    <string name="match_it">Match It</string>
    <string name="match_it_pro">Match It Pro</string>
    <string name="reversal">Reversal</string>
    <string name="reversal_pro">Reversal Pro</string>
    <string name="money_game">Money Game</string>
    <string name="solve_it">Solve It</string>
    <string name="after_math">After Math</string>
    <string name="speed_shop">Speed Shop</string>
    <string name="spot_it">Spot It</string>
    <string name="spot_it_pro">Spot It Pro</string>
    <string name="brain_flash">Brain Flash</string>
    <string name="title_activity_dual_focus_instruction">DualFocusInstruction</string>
    <string name="cognative_skill_trained">Cognitive Skill Trained : </string>
    <string name="divided_attention">Divided Attention</string>
    <string name="dual_focus_instruction">Dual Focus helps you to play attention at multiple things
        at same time thus enhancing your multitasking ability.</string>
    <string name="your_highest_score">Your Highest Score</string>
    <string name="score">12500</string>
    <string name="multiplier_reach">Multiplier Reached</string>
    <string name="multiplier_completed">2</string>
    <string name="how_to_play">How To Play?</string>
    <string name="start_game">Start</string>
    <string name="title_activity_dual_focus_pro_instruction">DualFocusProInstruction</string>
    <string name="dual_focus_pro_instruction">Dual Focus Pro helps you to play attention at multiple things
        at same time thus enhancing your multitasking ability.</string>
    <string name="title_activity_blink_instruction">BlinkInstruction</string>
    <string name="blink_instruction">A digit blinks in the central circle along with an image in any one of the smaller circles.</string>
    <string name="title_activity_blink_pro_instruction">BlinkProInstruction</string>
    <string name="title_activity_track_the_route">TrackTheRoute</string>
    <string name="title_activity_memory_matrix">MemoryMatrix</string>
    <string name="title_activity_memory_matrix_pro_instruction">MemoryMatrixProInstruction</string>
    <string name="title_activity_dancing_ball_instruction">DancingBallInstruction</string>
    <string name="title_activity_shapes_instruction">ShapesInstruction</string>
    <string name="title_activity_match_it_instruction">MatchItInstruction</string>
    <string name="title_activity_match_it_pro_instruction">MatchItProInstruction</string>
    <string name="title_activity_reversal_instruction">ReversalInstruction</string>
    <string name="title_activity_reversal_pro_instruction">ReversalProInstruction</string>
    <string name="title_activity_money_game_instruction">MoneyGameInstruction</string>
    <string name="title_activity_solve_it_instruction">SolveItInstruction</string>
    <string name="title_activity_after_math_instruction">AfterMathInstruction</string>
    <string name="title_activity_speed_shop_instruction">SpeedShopInstruction</string>
    <string name="title_activity_spot_it_instruction">SpotItInstruction</string>
    <string name="title_activity_spot_it_pro_instruction">SpotItProInstruction</string>
    <string name="title_activity_brain_flash_instruction">BrainFlashInstruction</string>
    <string name="track_route_instruction">Track the route enhances your working as well as
        navigational memory. It helps your brain remember pathways and different routes.</string>
    <string name="memory_matrix_instruction">Memory Matrix enhances your spatial memory and your
        ability to recall an objects location.</string>
    <string name="memory_matrix_pro_instruction">Memory Matrix Pro enhances your spatial memory and
        your ability to recall an objects location.</string>
    <string name="dancing_balls_instruction">Dancing Balls helps you to process information visually
        easily and efficiently, e.g. while driving a car.</string>
    <string name="shapes_instruction">Shapes helps you in making your brain capable of ignoring
        redundant data and at the same time taking up the required data.</string>
    <string name="match_it_instruction">Match it enhances your mental flexibility especially in
        touch and go decision making situations</string>
    <string name="match_it_pro_instruction">Match it Pro enhances your mental flexibility
        especially in touch and go decision making situations</string>
    <string name="reversal_instruction">Reversal helps you in improving your cognitive control by
        enhancing your ability of shifting the focus of attention quickly</string>
    <string name="reversal_pro_instruction">Reversal Pro helps you in improving your cognitive
        control by enhancing your ability of shifting the focus of attention quickly</string>
    <string name="money_game_instruction">Money Game enhances your problem solving skills by
        stimulating your quantitative reasoning abilities.</string>
</resources>